--- a/style.css
+++ b/style.css
@@ -34,17 +34,18 @@ a{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: absolute;
+    left: 0%;
+    top: 250px;
 }
 
 .glass{
     width: 300px;
     height: 420px;
     background-color: rgba(255, 255, 255, 0.5);
-    position: absolute;
+    position: relative;
     -webkit-clip-path: polygon(0 0, 100% 0, 90% 100%, 10% 100%);
     clip-path: polygon(0 0, 100% 0, 90% 100%, 10% 100%);
-    right: 400px;
-    top: 250px;
 }
 
 .water-ctr{
@@ -54,9 +55,8 @@ a{
     background-color: transparent;
     -webkit-clip-path: polygon(0 0, 100% 0, 90% 100%, 10% 100%);
     clip-path: polygon(0 0, 100% 0, 90% 100%, 10% 100%);
-    position: absolute;
-    right: 425px;
-    top: 250px;
+    position: relative;
+    bottom: 420px;
 }
 
 .water{
@@ -69,8 +69,6 @@ a{
     animation: mymove 10s;
     animation-fill-mode: forwards;
     z-index: 1;
-    right: 400px;
-    top: 250px;
 }
 
 @keyframes mymove {
