--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ a {
 .water {
     width: 4000px;
     height: 800px;
-    background-image: url('image.png');
+    background-image: url('yellow_bird.png');
     background-repeat: no-repeat;
     background-size: contain;
     position: relative;
