--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
 
 h1 {
     white-space: nowrap;
+    display: flex;
+    justify-content: center;
+    text-decoration: underline;
 }
 
 
@@ -32,7 +35,7 @@ a {
 
 ul{
     list-style-type: none;
-    
+    font-size: 40px;
 }
 
 
